--- a/Blackjack in C++/README
+++ b/Blackjack in C++/README
@@ -1,3 +1,4 @@
 Constructed new Blackjack Card Game in C++ using layout of old Blackjack Card Game in C located in other directory of this repo.
 This implementation included classes, i.e., use of function overloading, methods, etc.
+I have also included a minimalistic gui for different commands in the game displayed through a window with win32 api. 
 Fixed minor bugs with double feature that were present in old Blackjack Card game in C.
